--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,8 +9,8 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <h3>I am a {{ bio }}</h3>
-      <img class="portrait" src="/img/me.jpg" />
+      <p>This is a weather app that shows weather of location based on user input by fetching coordinates using mapbox and weather using weatherstack.</p>
+      <img class="portrait" src="/img/HTML.jpg" />
     </div>
 
     {{>footer}}
